<resources>
    <string name="app_name">Ti.me</string>
    <string name="action_settings">Settings</string>
    <string name="def_view_settings_header">Select your default calender view</string>
    <string name="weekly_txt">Weekly</string>
    <string name="daily_txt">Daily</string>
    <string name="monthly_txt">Monthly</string>
    <string name="title_activity_new_start_settings">New Start Settings</string>
    <string name="import_calendar">IMPORT</string>
    <string name="title_activity_add_profile">Add A Profile</string>
    <string name="title_activity_bin">Bin</string>
    <string name="title_activity_import_calendar">Import A Calendar</string>
    <string name="title_activity_starred_entries">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_name_txt">Name this profile</string>
    <string name="profile_name_hint_txt">alphabets only</string>
    <string name="profile_description_txt">Describe this profile</string>
    <string name="profile_color_txt">Color</string>
    <string name="new_entry_profile_txt">Profile:</string>
    <string name="new_entry_type_txt">Event type:</string>
    <string name="new_entry_invite_txt">Invite others:</string>
    <string name="new_entry_reminder_txt">Add a reminder</string>
    <string name="event_name">Name this event</string>
    <string name="from_txt">FROM</string>
    <string name="till_txt">TILL</string>
    <string name="select_color_txt">choose a color</string>
    <string name="profile_list_header">PROFILES</string>
    <string name="event_description">Describe this event</string>
    <string name="event_location">Set event location</string>

    <!--Arrays-->
    <string-array name="event_type">
        <item>Private</item>
        <item>Public</item>
        <item>Group Meeting</item>
        <item>Academic</item>
        <item>Social</item>
        <item>Family</item>
    </string-array>
    <string-array name="event_reminder_min_hr">
        <item>min.</item>
        <item>hr.</item>
        <item>day(s)</item>
        <item>wk.</item>
        <item>mth.</item>
        <item>yr.</item>
    </string-array>

    <string-array name="event_reminder_period">
        <item>after</item>
        <item>before</item>
    </string-array>


    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_selected_day"></string>
</resources>
